<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="5dp"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="16dp"
    android:paddingTop="5dp"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="265dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/list_studs_text"
        android:scaleType="fitCenter"
        android:src="@drawable/groups2" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="16dp"
        android:entries="@array/students_groups" />

    <Button
        android:id="@+id/btn_grp_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00377A"
        android:onClick="onGrpBtnClick"
        android:text="@string/btn_grp_detail_txt"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:background="#00377A"
        android:onClick="onBtnClick"
        android:text="@string/btn_text"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/timer"
        android:textAlignment="center"
        android:textSize="20sp" />


</LinearLayout>