<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:background="#C6D2F4"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".StudentListActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="287dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/list_studs_text"
        android:scaleType="centerInside"
        android:src="@drawable/student" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/list_studs_text"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnPlus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3949AB"
        android:onClick="onPlusBtnClick"
        android:text="@string/plus_txt"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/sendBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:background="#3949AB"
        android:onClick="onSendBtnClick"
        android:text="@string/btn_send"
        android:textColor="#FFFFFF" />

</LinearLayout>